fixed navbar z-index and made nav bar mobile responsive

--- a/public/home.css
+++ b/public/home.css
@@ -21,6 +21,9 @@ background-position: center;
   z-index:-1;
   
 } 
+nav {
+  z-index:500
+}
 .under {
     
   position:relative;
@@ -190,7 +193,7 @@ a:hover {
   left: 0;
   top: 0px;
   width: 100%;
-  
+  z-index:99;
   text-align: center;
   height:50px;
 }
@@ -208,6 +211,37 @@ li:hover {
 #about {
   text-align: center;
   font-size: 30px;
+}
+@media screen and (max-width: 600px) {
+  .navbar a:not(:first-child), .dropdown-menu .dropbtn {
+    display: none;
+  }
+  .navbar a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .navbar.responsive {position: relative;}
+  .navbar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .navbar.responsive .dropdown-menu {float: none;}
+  .navbar.responsive .dropdown-submenu {position: relative;}
+  .navbar.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
 
 
