--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,8 @@ body {
 #reqbody {
     margin-left: 14px;
     font-family: Helvetica, sans-serif;
+    z-index: -1
+    
 }
 
 h1 {
